8:17 2007-8-7 GMT+8 version 329
* Changed "ChangLog" to the right order
* Updated README to explicitly give some restrictions of supported formats (VAMAS and WinSpec)
* DataSet and all derived classes have only one Ctor, accepting "istream&" argument only
* Removed XXXDataSet::init() & is_filetype. Type checking is moved to the static check() member function
* Other slight  changes, such as updating comments, moving "include "util.h" from xxxDataSet.h to .cpp files, changing to use ifstream& instead of ifstream* inside DataSet.
* Added some handling to avoid raw_v2v3 be mistaken as raw_v1, rigaku_dat as text.

21:34 2007-8-5 GMT+8 version 328
* Some bugs fixed
* Changed to avoid use seekg() in the file reading stream
* Gave up PDP-endian support
* Reimplement the philipse-udf format
* XXXDataSet's ctor can also accept istream& argument.
* Some other changes following Marcin's advice.

6:02 2007-8-3 GMT+8 version 326
* Added new format support of Princeton Instruments WinSpec SPE format
* Extended some functions in util.cpp, 
* Fixed a bug in function le_to_host()

17:30 2007-7-28 GMT+8 version 325
* Removed "common.h" file, and moved the needed functions to util.h
* Move docs about file formats from "IMPLEMENTATION REF" in test/*/README and from docs/formats to ds_*.cpp files. Integrated the format info together into ds_*.cpp files
* Cleaned up some code, /test -> /samples, update README and all comments, rm /docs
* Added a "3rdparty" directory, put some of the boost lib headers there, in case that client does not have the boost library installed.
* Changed to use struct FormatInfo to handle the format info, instead of using global arrays. Based on Marcin's advice with some modifications, e.g, the meanings of field "name" and "desc" are exchanged; added xy_ftype field etc.
* Added format check for uxd file format.

0:56 2007-7-25 GMT+8 version 320